# chess

./: README.md  chess_fixed-GPT5-pro.py  config.py  pyproject.toml
.github/workflows/: ci.yml
ai/: __init__.py  anthropic_client.py  commentator.py  gemini_client.py  move_parser.py  openai_client.py  player.py  provider.py  strategist.py
docs/: module_inventory.md
engine/: __init__.py  fen.py  game.py
telemetry/: __init__.py  logger.py
tests/: conftest.py  test_ai_contracts_legacy.py  test_config.py  test_fen_legacy.py  test_rules_legacy.py
tests/ai/: test_anthropic_client.py  test_commentator.py  test_gemini_client.py  test_move_parser.py  test_openai_client.py  test_player.py  test_provider.py  test_strategist.py
tests/engine/: test_fen.py  test_game.py
tests/golden/: commentary_response_invalid.json  commentary_response_valid.json
tests/scripts/: test_chess_fixed_gpt5_pro.py
tests/telemetry/: test_logger.py
tests/ui/: test_app.py  test_board_view.py  test_controller.py  test_controls.py
ui/: __init__.py  app.py  board_view.py  controller.py  controls.py
