[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
extend-ignore = ["E203"]
src = ["engine", "ui", "tests"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
